<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical" >

    <include layout="@layout/page_top" />

    <include layout="@layout/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/padd_leftright"
            android:paddingTop="10dp"
            android:text="@string/usercenter_sendmsg"
            android:textColor="@color/text_noclick_color"
            android:textSize="@dimen/text_zhu_size" />

        <EditText
            android:id="@+id/user_sendidea_content"
            android:layout_width="fill_parent"
            android:layout_height="170dp"
            android:background="@color/white"
            android:gravity="top"
            android:hint="@string/userSendIdear_tv_contenthint"
            android:maxLength="200"
            android:padding="8dip"
             android:textColor="@color/text_contents_color"
            android:textColorHint="@color/text_hint_color"
            android:textSize="@dimen/text_contents_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/padd_leftright"
            android:paddingTop="10dp"
            android:text="@string/userSendIdear_tv_tel"
            android:textColor="@color/text_noclick_color"
            android:textSize="@dimen/text_zhu_size" />

        <EditText
            android:id="@+id/user_sendidea_tel"
            style="@style/user_item_paddtopbottom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/userSendIdear_tv_telhint"
            android:paddingLeft="@dimen/padd_leftright"
            android:singleLine="true"
            android:maxLength="30"
            android:textColor="@color/text_contents_color"
            android:textColorHint="@color/text_hint_color"
            android:textSize="@dimen/text_contents_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/jianju"
            style="@style/user_item_paddlefgtright" >

            <include layout="@layout/click_btn" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>