<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/user_item_padd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <!-- 场馆信息 -->

    <TextView
        android:id="@+id/userorderdetails_stadiuminfo_tv_stadiumname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_contents_color"
        android:textSize="@dimen/text_contents_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userOrdersDetails_date"
            android:textColor="@color/text_click_color"
            android:textSize="@dimen/text_contents_size" />

        <TextView
            android:id="@+id/userorderdetails_stadiuminfo_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_contents_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/userorderdetails_stadiuminfo_tv_numtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userOrdersDetails_num"
            android:textColor="@color/text_click_color"
            android:textSize="@dimen/text_contents_size" />

        <TextView
            android:id="@+id/userorderdetails_stadiuminfo_tv_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padd_imgtextleftright"
            android:textColor="@color/text_click_color"
            android:textSize="@dimen/text_contents_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/userorderdetails_stadiuminfo_tv_servertitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userOrdersDetails_server"
            android:textColor="@color/text_click_color"
            android:textSize="@dimen/text_contents_size" />

        <TextView
            android:id="@+id/userorderdetails_stadiuminfo_tv_server"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_click_color"
            android:textSize="@dimen/text_contents_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userOrdersDetails_area"
            android:textColor="@color/text_click_color"
            android:textSize="@dimen/text_contents_size" />

        <TextView
            android:id="@+id/userorderdetails_stadiuminfo_tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_click_color"
            android:textSize="@dimen/text_contents_size" />
    </LinearLayout>

</LinearLayout>