<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:orientation="vertical" >

    <include
        layout="@layout/page_top"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/pagetop_iv_back_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/back"
            android:contentDescription="@string/contentDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/user_regist_top_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/tv_reg2"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_pagetop_size" />
        </LinearLayout>
        <!-- 账号密码 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/corners_btnbg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_img_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padd_leftright" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_img_phone" />

                <com.bestdo.bestdoStadiums.utils.SupplierEditText
                    android:id="@+id/userregist_et_phone"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:hint="@string/tv_phonehint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColor="@color/text_contents_color"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="@dimen/text_contents_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padd_leftright" >

                <include layout="@layout/line" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/btn_img_height"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/padd_leftright" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_img_pw" />

                <com.bestdo.bestdoStadiums.utils.SupplierEditText
                    android:id="@+id/userregist_et_code"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:ellipsize="end"
                    android:hint="@string/tv_codehint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:singleLine="true"
                    android:textColor="@color/text_contents_color"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="@dimen/text_contents_size" >
                </com.bestdo.bestdoStadiums.utils.SupplierEditText>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/userregist_tv_getcode"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="@string/tv_getcode"
                        android:textColor="@color/text_noclick_color"
                        android:textSize="@dimen/text_zhu_size" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- 登陆按钮 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <include layout="@layout/click_blue_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/userlogin_tv_reg_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tv_reg_login"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_contents_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>