<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg"
    android:id="@+id/useraccount_layout"
    android:orientation="vertical" >

    <include layout="@layout/page_top" />

    <include layout="@layout/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/useraccount_relay_avatar"
            style="@style/user_item_paddlefgtright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/jianju"
            android:layout_marginTop="@dimen/jianju"
            android:background="@color/white" >

            <TextView
                style="@style/user_item_paddtopbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_account_avatar"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_contents_size" />

            <com.bestdo.bestdoStadiums.utils.CircleImageView
                android:id="@+id/useraccount_iv_avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/padd_imgtextleftright"
                android:layout_toLeftOf="@+id/iv_avatararrow"
                android:contentDescription="@string/contentDescription" />

            <ImageView
                android:id="@+id/iv_avatararrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/usercenter_arrow_img"
                android:contentDescription="@string/contentDescription" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padd_leftright" 
            android:visibility="gone">

            <include layout="@layout/line" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/useraccount_relay_nickname"
            style="@style/user_item_paddlefgtright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                style="@style/user_item_paddtopbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_account_nickname"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_contents_size" />

            <TextView
                android:id="@+id/useraccount_tv_nickname"
                style="@style/user_item_paddtopbottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:layout_marginRight="@dimen/padd_imgtextleftright"
                android:layout_toLeftOf="@+id/iv_nicknamearrow"
                android:hint="@string/user_account_nickname_hint"
                android:textColor="@color/text_click_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="@dimen/text_contents_size" />

            <ImageView
                android:id="@+id/iv_nicknamearrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/usercenter_arrow_img"
                android:contentDescription="@string/contentDescription" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padd_leftright" >

            <include layout="@layout/line" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/useraccount_relay_name"
            style="@style/user_item_paddlefgtright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                style="@style/user_item_paddtopbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_account_name"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_contents_size" />

            <TextView
                android:id="@+id/useraccount_tv_name"
                style="@style/user_item_paddtopbottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="right|center_vertical"
                android:layout_marginRight="@dimen/padd_imgtextleftright"
                android:layout_toLeftOf="@+id/iv_namearrow"
                android:hint="@string/user_account_name_hint"
                android:textColor="@color/text_click_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="@dimen/text_contents_size" />

            <ImageView
                android:id="@+id/iv_namearrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/usercenter_arrow_img"
                android:contentDescription="@string/contentDescription" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padd_leftright" >

            <include layout="@layout/line" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/useraccount_relay_sex"
            style="@style/user_item_paddlefgtright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >

            <TextView
                style="@style/user_item_paddtopbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/user_account_sex"
                android:textColor="@color/text_contents_color"
                android:textSize="@dimen/text_contents_size" />

            <TextView
                android:id="@+id/useraccount_tv_sex"
                style="@style/user_item_paddtopbottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/padd_imgtextleftright"
                android:layout_toLeftOf="@+id/iv_sexarrow"
                android:textColor="@color/text_click_color"
                android:textSize="@dimen/text_contents_size" />

            <ImageView
                android:id="@+id/iv_sexarrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/usercenter_arrow_img"
                android:contentDescription="@string/contentDescription" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>